fix intersect, change path, update docs
